# console-snake-cpp

./: .gitignore  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  LICENSE  METADATA_CHECKLIST.md  Makefile  README.md  REPOSITORY_SETUP.md  build.bat  highscores.txt  run_game.bat  snake  snake.cpp  snake.h
.github/: copilot-instructions.md
docs/: README.md
scripts/: README.md  verify-metadata.py  verify-metadata.sh
src/: README.md  console.cpp  console.h  food.cpp  food.h  game.cpp  game.h  main.cpp  snake.cpp  snake.h  utils.cpp  utils.h
